docs(storybook): update
Signed-off-by: Mauricio Robayo <rfmajo@gmail.com>

--- a/stories/ReEmoji.stories.mdx
+++ b/stories/ReEmoji.stories.mdx
@@ -1,33 +1,33 @@
 import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs";
 import { Semoji } from "../src/Semoji";
 
-<Meta title="Reamoji" component={Semoji} />
+<Meta title="switch-emoji" component={Semoji} />
 
 export const Template = (args) => <Semoji {...args} />;
 
-# Reamoji
+# Switch Emoji 💃
 
-[![Reamoji](https://badgen.net/npm/v/reamoji)](https://www.npmjs.com/package/reamoji)
-[![CI](https://github.com/MauricioRobayo/reamoji/actions/workflows/main.yml/badge.svg)](https://github.com/MauricioRobayo/reamoji/actions/workflows/main.yml)
-[![codecov](https://codecov.io/gh/MauricioRobayo/reamoji/branch/main/graph/badge.svg?token=gkrRmHZHGB)](https://codecov.io/gh/MauricioRobayo/reamoji)
-[![CodeFactor](https://www.codefactor.io/repository/github/mauriciorobayo/reamoji/badge)](https://www.codefactor.io/repository/github/mauriciorobayo/reamoji)
-[![bundlephobia](https://badgen.net/bundlephobia/minzip/reamoji)](https://bundlephobia.com/package/reamoji)
+[![Semoji](https://badgen.net/npm/v/switch-emoji)](https://www.npmjs.com/package/switch-emoji)
+[![CI](https://github.com/MauricioRobayo/switch-emoji/actions/workflows/main.yml/badge.svg)](https://github.com/MauricioRobayo/switch-emoji/actions/workflows/main.yml)
+[![codecov](https://codecov.io/gh/MauricioRobayo/switch-emoji/branch/main/graph/badge.svg?token=gkrRmHZHGB)](https://codecov.io/gh/MauricioRobayo/switch-emoji)
+[![CodeFactor](https://www.codefactor.io/repository/github/mauriciorobayo/switch-emoji/badge)](https://www.codefactor.io/repository/github/mauriciorobayo/switch-emoji)
+[![bundlephobia](https://badgen.net/bundlephobia/minzip/switch-emoji)](https://bundlephobia.com/package/switch-emoji)
 
 **Switchable Twitter/GitHub emojis**.
 
 ## Installation
 
 ```sh
-npm install --save reamoji
+npm install --save switch-emoji
 ```
 
 ## Usage
 
 ```js
-import { Reamoji } from "reamoji";
+import { switch-emoji } from "switch-emoji";
 
 export default function SomeComponent() {
-  return <Reamoji emoji="💃" source="GitHub" />;
+  return <switch-emoji emoji="💃" source="GitHub" />;
 }
 ```
 
@@ -67,8 +67,8 @@ The component is written in TypeScript and type definitions are included.
 
 ## Acknowledgements
 
-This is an [open-source](https://github.com/MauricioRobayo/reamoji) project, all contributions are welcome and highly appreciated.
+This is an [open-source](https://github.com/MauricioRobayo/switch-emoji) project, all contributions are welcome and highly appreciated.
 
 ## License
 
-[MIT](https://github.com/MauricioRobayo/reamoji/blob/main/LICENSE)
+[MIT](https://github.com/MauricioRobayo/switch-emoji/blob/main/LICENSE)
