docs(storybook): remove outdated comment
Signed-off-by: Mauricio Robayo <rfmajo@gmail.com>

--- a/stories/Semoji.stories.mdx
+++ b/stories/Semoji.stories.mdx
@@ -35,9 +35,7 @@ export default function SomeComponent() {
 
 <ArgsTable />
 
-## Examples
-
-Inspect the element without hovering or focusing on it to see what's actually rendered:
+## Example
 
 <Canvas>
   <Story
