docs(storybook): fix main example
Signed-off-by: Mauricio Robayo <rfmajo@gmail.com>

--- a/stories/Semoji.stories.mdx
+++ b/stories/Semoji.stories.mdx
@@ -24,10 +24,10 @@ npm install --save switch-emoji
 ## Usage
 
 ```js
-import { switch-emoji } from "switch-emoji";
+import { Semoji } from "switch-emoji";
 
 export default function SomeComponent() {
-  return <switch-emoji emoji="💃" source="GitHub" />;
+  return <Semoji emoji="💃" source="GitHub" />;
 }
 ```
 
