--- a/stories/Semoji.stories.mdx
+++ b/stories/Semoji.stories.mdx
@@ -15,6 +15,13 @@ export const Template = (args) => <Semoji {...args} />;
 
 **Switchable Twitter/GitHub emojis**.
 
+| GitHub                                | Twitter                                |
+| ------------------------------------- | -------------------------------------- |
+| <Semoji emoji="💃" source="GitHub" /> | <Semoji emoji="💃" source="Twitter" /> |
+| <Semoji emoji="🎆" source="GitHub" /> | <Semoji emoji="🎆" source="Twitter" /> |
+| <Semoji emoji="🎉" source="GitHub" /> | <Semoji emoji="🎉" source="Twitter" /> |
+| <Semoji emoji="🔫" source="GitHub" /> | <Semoji emoji="🔫" source="Twitter" /> |
+
 ## Installation
 
 ```sh
@@ -26,8 +33,23 @@ npm install --save switch-emoji
 ```js
 import { Semoji } from "switch-emoji";
 
-export default function Emoji(props) {
-  return <Semoji {...props} source="GitHub" />;
+export function SomeComponent() {
+  return <Semoji emoji="👋" source="GitHub" />;
+}
+```
+
+## Twemoji
+
+You can wrap `Semoji` to create you own `Twemoji` React component:
+
+```ts
+import React from "react";
+import { Semoji, SemojiProps } from "switch-emoji";
+
+type Props = Omit<SemojiProps, "source">;
+
+export function Twemoji(props: Props): JSX.Element | null {
+  return <Semoji {...props} source="Twitter" />;
 }
 ```
 
@@ -35,24 +57,28 @@ export default function Emoji(props) {
 
 <ArgsTable />
 
-## Example
+## Twitter Emoji
 
 <Canvas>
   <Story
-    name="Twitter"
+    name="Twitter Thumbs Up"
     args={{
-      emoji: "🚀",
+      emoji: "👍",
       source: "Twitter",
     }}
   >
     {Template.bind({})}
   </Story>
+</Canvas>
+
+## GitHub Emoji
+
+<Canvas>
   <Story
-    name="GitHub"
+    name="GitHub Thumbs Up"
     args={{
-      emoji: "🚀",
+      emoji: "👍",
       source: "GitHub",
-      height: "1.25em",
     }}
   >
     {Template.bind({})}
