feat(#11): add OpenMoji support
closes #11

Signed-off-by: Mauricio Robayo <rfmajo@gmail.com>

--- a/stories/Semoji.stories.mdx
+++ b/stories/Semoji.stories.mdx
@@ -85,6 +85,20 @@ export function Twemoji(props: Props): JSX.Element | null {
   </Story>
 </Canvas>
 
+## OpenMoji Emoji
+
+<Canvas>
+  <Story
+    name="GitHub Thumbs Up"
+    args={{
+      emoji: "👍",
+      source: "OpenMoji",
+    }}
+  >
+    {Template.bind({})}
+  </Story>
+</Canvas>
+
 ## TypeScript
 
 The component is written in TypeScript and type definitions are included.
