docs(storybook): remove redundancies
Signed-off-by: Mauricio Robayo <rfmajo@gmail.com>

--- a/src/Semoji.stories.mdx
+++ b/src/Semoji.stories.mdx
@@ -59,7 +59,7 @@ export function Twemoji(props: Props): JSX.Element | null {
 
 <ArgsTable />
 
-## Twitter Emoji
+## Twitter
 
 <Canvas>
   <Story
@@ -73,7 +73,7 @@ export function Twemoji(props: Props): JSX.Element | null {
   </Story>
 </Canvas>
 
-## GitHub Emoji
+## GitHub
 
 <Canvas>
   <Story
@@ -87,7 +87,7 @@ export function Twemoji(props: Props): JSX.Element | null {
   </Story>
 </Canvas>
 
-## OpenMoji Emoji
+## OpenMoji
 
 <Canvas>
   <Story
